Fix bug.